# SAFU

./: .gitignore  BROWSER_ERRORS_FIX.md  CORS_CONFIGURATION.md  CSP_FIX_STEP_BY_STEP.md  DEBUG_INFO.md  DEBUG_SCHEDULE_DISPLAY.md  FIX_SCHEDULE_DISPLAY.md  HOW_TO_VIEW_LOGS.md  HOW_TO_VIEW_SCHEDULE.md  Makefile  PGADMIN_CONNECTION.md  QUICKSTART.md  README.md  START_FROM_ZERO.md  build.ps1  docker-compose.yml  first-run.ps1  package-lock.json
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_auth_and_features.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  attachment.py  building.py  calendar_subscription.py  change_log.py  discipline.py  event.py  faculty.py  favorite.py  group.py  lecturer.py  notification.py  room.py  stream.py  time_slot.py  user.py  work_kind.py
backend/app/schemas/: __init__.py  building.py  calendar.py  change_log.py  discipline.py  event.py  faculty.py  favorite.py  group.py  lecturer.py  notification.py  room.py  stream.py  time_slot.py  user.py  work_kind.py
backend/app/seeds/: buildings.py  disciplines.py  events.py  faculties.py  groups.py  lecturers.py  main.py  rooms.py  streams.py  work_kinds.py
backend/app/services/: cache.py  change_log.py  ics.py  parser.py
backend/app/validators/: conflicts.py
backend/tests/: conftest.py  test_ics.py  test_parser.py  test_validators.py
frontend/: Dockerfile  (+4 more)
(+44 files in other folders)
